@@ -450,14 +450,10 @@ Emacs dired can't find files."
 		(file-name-as-directory f)
 	      f))
 	  (with-current-buffer (tramp-get-buffer v)
-	    (append
-	     ;; On some file systems like "sdcard", "." and ".." are
-	     ;; not included.
-	     '("." "..")
-	     (mapcar
-	      (lambda (l)
-		(and (not (string-match-p (rx bol (* blank) eol) l)) l))
-	      (split-string (buffer-string) "\n" 'omit))))))))))
+	    (mapcar
+	     (lambda (l)
+	       (and (not (string-match-p (rx bol (* blank) eol) l)) l))
+	     (split-string (buffer-string) "\n" 'omit)))))))))
 
 (defun tramp-adb-handle-file-local-copy (filename)
   "Like `file-local-copy' for Tramp files."
